grid done with examples svg moved to external file base project updated to use new grid font loading with examples

--- a/components/blog/c_previous-posts.html
+++ b/components/blog/c_previous-posts.html
@@ -1,7 +1,7 @@
 <div class="sidebar previous-post__list">
 	<header class="sidebar__header">
 		<div class="sidebar__icon">
-			<svg><use xlink:href="#menu-alt" /></svg>
+			<svg><use xlink:href="/resources/imgs/svgsprite.svg#menu-alt" /></svg>
 		</div>
 		<span class="sidebar__header-title">Previous Blog Posts</span>
 	</header>
