--- a/components/blog/c_sidebar-bands.html
+++ b/components/blog/c_sidebar-bands.html
@@ -1,7 +1,7 @@
 <div class="sidebar sidebar__bands">
 	<header class="sidebar__header">
 		<div class="sidebar__icon">
-			<svg><use xlink:href="#folder" /></svg>
+			<svg><use xlink:href="/resources/imgs/svgsprite.svg#folder" /></svg>
 		</div>
 		<span class="sidebar__header-title">Archives</span>
 	</header>
@@ -20,7 +20,7 @@
 <div class="sidebar sidebar__bands">
 	<header class="sidebar__header">
 		<div class="sidebar__icon">
-			<svg><use xlink:href="#filter" /></svg>
+			<svg><use xlink:href="/resources/imgs/svgsprite.svg#filter" /></svg>
 		</div>
 		<span class="sidebar__header-title">CatEgories</span>
 	</header>
