--- a/components/forms/checkboxes.html
+++ b/components/forms/checkboxes.html
@@ -2,12 +2,12 @@
     <div class="ns-form__group">
         <div class="checkbox">
             <label>
-                <input type="checkbox" name="choice" value="first"><label><svg><use xlink:href="#checkbox" /></svg></label> 1st choice
+                <input type="checkbox" name="choice" value="first"><label><svg><use xlink:href="/resources/imgs/svgsprite.svg#checkbox" /></svg></label> 1st choice
             </label>
         </div>
         <div class="checkbox">
             <label>
-                <input type="checkbox" name="choice" value="second"><label><svg><use xlink:href="#checkbox" /></svg></label> 2nd choice
+                <input type="checkbox" name="choice" value="second"><label><svg><use xlink:href="/resources/imgs/svgsprite.svg#checkbox" /></svg></label> 2nd choice
             </label>
         </div>
     </div>
@@ -15,12 +15,12 @@
     <div class="ns-form__group">
         <div class="checkbox checkbox--disabled">
             <label>
-                <input type="checkbox" name="choice" value="first" disabled><label><svg><use xlink:href="#checkbox" /></svg></label> 1st choice
+                <input type="checkbox" name="choice" value="first" disabled><label><svg><use xlink:href="/resources/imgs/svgsprite.svg#checkbox" /></svg></label> 1st choice
             </label>
         </div>
         <div class="checkbox checkbox--disabled">
             <label>
-                <input type="checkbox" name="choice" value="second" disabled checked><label><svg><use xlink:href="#checkbox" /></svg></label> 2nd choice
+                <input type="checkbox" name="choice" value="second" disabled checked><label><svg><use xlink:href="/resources/imgs/svgsprite.svg#checkbox" /></svg></label> 2nd choice
             </label>
         </div>
     </div>
@@ -31,7 +31,7 @@
     <div class="ns-form__group">
         <div class="checkbox">
             <label>
-                <input type="checkbox" name="choice" value="first"><label><svg><use xlink:href="#checkbox" /></svg></label> 1st choice
+                <input type="checkbox" name="choice" value="first"><label><svg><use xlink:href="/resources/imgs/svgsprite.svg#checkbox" /></svg></label> 1st choice
             </label>
         </div>
     </div>
@@ -39,7 +39,7 @@
     <div class="ns-form__group">
         <div class="checkbox">
             <label>
-                <input type="checkbox" name="choice" value="second"><label><svg><use xlink:href="#checkbox" /></svg></label> 2nd choice
+                <input type="checkbox" name="choice" value="second"><label><svg><use xlink:href="/resources/imgs/svgsprite.svg#checkbox" /></svg></label> 2nd choice
             </label>
         </div>
     </div>
@@ -47,7 +47,7 @@
     <div class="ns-form__group">
         <div class="checkbox checkbox--disabled">
             <label>
-                <input type="checkbox" name="choice" value="first" disabled><label><svg><use xlink:href="#checkbox" /></svg></label> 1st choice
+                <input type="checkbox" name="choice" value="first" disabled><label><svg><use xlink:href="/resources/imgs/svgsprite.svg#checkbox" /></svg></label> 1st choice
             </label>
         </div>
     </div>
@@ -55,7 +55,7 @@
     <div class="ns-form__group">
         <div class="checkbox checkbox--disabled">
             <label>
-                <input type="checkbox" name="choice" value="second" disabled checked><label><svg><use xlink:href="#checkbox" /></svg></label> 2nd choice
+                <input type="checkbox" name="choice" value="second" disabled checked><label><svg><use xlink:href="/resources/imgs/svgsprite.svg#checkbox" /></svg></label> 2nd choice
             </label>
         </div>
     </div>
