--- a/components/forms/select.html
+++ b/components/forms/select.html
@@ -9,7 +9,7 @@
                 <option value="5">item 5</option>
             </select>
             <div class="ns-form__select-icon">
-                <svg><use xlink:href="#select" /></svg>
+                <svg><use xlink:href="/resources/imgs/svgsprite.svg#select" /></svg>
             </div>
         </div>
     </div>
@@ -24,7 +24,7 @@
                 <option value="5">item 5</option>
             </select>
             <div class="ns-form__select-icon">
-                <svg><use xlink:href="#select" /></svg>
+                <svg><use xlink:href="/resources/imgs/svgsprite.svg#select" /></svg>
             </div>
         </div>
     </div>
@@ -41,7 +41,7 @@
                 <option value="5">item 5</option>
             </select>
             <div class="ns-form__select-icon">
-                <svg><use xlink:href="#select" /></svg>
+                <svg><use xlink:href="/resources/imgs/svgsprite.svg#select" /></svg>
             </div>
         </div>
     </div>
@@ -56,7 +56,7 @@
                 <option value="5">item 5</option>
             </select>
             <div class="ns-form__select-icon">
-                <svg><use xlink:href="#select" /></svg>
+                <svg><use xlink:href="/resources/imgs/svgsprite.svg#select" /></svg>
             </div>
         </div>
     </div>
