--- a/components/util/svg-show.html
+++ b/components/util/svg-show.html
@@ -1,5 +1,4 @@
-<textarea class="js-copyarea"></textarea>
-<br>
+<textarea class="js-copyarea" hidden></textarea>
 <strong class="js-output" style="display: block; width: 100%; text-align: center; margin-botton: 20px;">&nbsp;</strong>
 <div class="svg-list" data-sprite-url="/resources/imgs/svgsprite.svg">
 	<div class="svg-item svg-item--stroke">
