--- a/resources/css/base/fontfaces.less
+++ b/resources/css/base/fontfaces.less
@@ -3,3 +3,38 @@
 
 /* Font Faces
 ================================== */
+@font-face {
+    font-family: 'aileron subset';
+    src: url('../fonts/aileron-regular-subset.woff2') format('woff2'),
+         url('../fonts/aileron-regular-subset.woff') format('woff'),
+         url('../fonts/aileron-regular-subset.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'aileron';
+    src: url('../fonts/aileron-regular.woff2') format('woff2'),
+         url('../fonts/aileron-regular.woff') format('woff'),
+         url('../fonts/aileron-regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'aileron';
+    src: url('../fonts/aileron-bold.woff2') format('woff2'),
+         url('../fonts/aileron-bold.woff') format('woff'),
+         url('../fonts/aileron-bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'aileron';
+    src: url('../fonts/aileron-italic.woff2') format('woff2'),
+         url('../fonts/aileron-italic.woff') format('woff'),
+         url('../fonts/aileron-italic.ttf') format('truetype');
+    font-weight: 400;
+    font-style: italic;
+}
