--- a/resources/css/base/variables/typevars.less
+++ b/resources/css/base/variables/typevars.less
@@ -1,9 +1,18 @@
 //== Typography ==//
 
 //font family
-@font-family:           'Helvetica Neue', 'Roboto', 'helveticaui';
-@font-family-serif:     'Helvetica Neue', 'Roboto', 'helveticaui';
-@icon-font:             "FontAwesome";
+//font-family loaded
+@font-family-unloaded:			sans-serif;
+@font-family-header-unloaded:	sans-serif;
+@font-family-subset: 			'aileron subset', sans-serif;
+@font-family-header-subset:		'aileron subset', sans-serif;
+@font-family: 					'aileron', sans-serif;
+@font-family-header:			'aileron', sans-serif;
+
+//font-family default
+// @font-family:           'Helvetica Neue', 'Roboto', 'helveticaui';
+// @font-family-serif:     'Helvetica Neue', 'Roboto', 'helveticaui';
+
 @base-font-size:        1.6rem;
 
 //scale factors -- don't change
@@ -28,7 +37,6 @@
 @line-height:           @p-line-height;
 
 //header vars
-@headings-font-family:  @font-family;
 @headings-font-weight:  700;
 @headings-color:        inherit;
 @strong-weight:         700;
