--- a/resources/css/components/blog/sidebar.less
+++ b/resources/css/components/blog/sidebar.less
@@ -1,5 +1,6 @@
 .sidebar{
-	.base-column-m();
+	width: 100%;
+	.gutter();
 	padding-left: calc(16.666667% ~" -" (19px + @column-gutter-half));
 
 	& + &{
