--- a/resources/css/forms/form.less
+++ b/resources/css/forms/form.less
@@ -1,9 +1,12 @@
 .ns-form{
-	//base
+	//elements
 	@import "elements/reset";
 	@import "elements/inputs";
-	@import "elements/select";
-	@import "elements/radio-checkbox";
+	@import "elements/font-loading";
 	@import "elements/button";
-	@import "elements/structure";
+
+	//components
+	@import "components/select";
+	@import "components/radio-checkbox";
+	@import "components/structure";
 }
