--- a/resources/css/helpers/ratios.less
+++ b/resources/css/helpers/ratios.less
@@ -1,9 +1,9 @@
-.ratio{
-	&--21-7,
-	&--16-9,
-	&--4-3,
-	&--3-2,
-	&--1-1{
+.h-ratio{
+	&--21by7,
+	&--16by9,
+	&--4by3,
+	&--3by2,
+	&--1by1{
 		position: relative;
 		width: 100%;
 		height: 0;
@@ -16,23 +16,23 @@
 		}
 	}
 
-	&--21-7{
+	&--21by7{
 		padding-bottom: 33.333334%;
 	}
 
-	&--16-9{
+	&--16by9{
 		padding-bottom: 56.25%;
 	}
 
-	&--4-3{
+	&--4by3{
 		padding-bottom: 75%;
 	}
 
-	&--3-2{
+	&--3by2{
 		padding-bottom: 66.666667%;
 	}
 
-	&--1-1{
+	&--1by1{
 		padding-bottom: 100%;
 	}
 }
