--- a/resources/css/styleguide/base.less
+++ b/resources/css/styleguide/base.less
@@ -32,9 +32,9 @@
 
 	&-serif{
 		margin-bottom: 10px;
-		font-family: @font-family-serif;
+		font-family: @font-family-header;
 		&:after{
-			content: ~'" - ' @font-family-serif ~'"';
+			content: ~'" - ' @font-family-header ~'"';
 		}
 	}
 
