--- a/resources/css/styleguide/svg.less
+++ b/resources/css/styleguide/svg.less
@@ -1,13 +1,17 @@
 .svg-list{
-	// .flexbox();
-	// .flex-wrap(wrap);
+	margin-top: 50px;
+	.column-container();
+	.justify-content(center);
+	.grid({
+		.grid-column-size(2);
+	});
 }
 
 .svg-item{
-	// .column-m(2);
-	// .flexbox();
-	// .flex-direction(column);
-	// .align-items(center);
+	.flexbox();
+	.flex-direction(column);
+	.align-items(center);
+	margin-bottom: 25px;
 
 	*{
 		pointer-events: none;
