--- a/resources/css/base/mixins.less
+++ b/resources/css/base/mixins.less
@@ -1,5 +1,6 @@
 @import "mixins/flexmixins";
 @import "mixins/prefixmixins";
-@import "mixins/grid_mixins";
 @import "mixins/mixins";
 @import "mixins/nthSelectors";
+
+@import "grid/mixins";
