--- a/resources/css/base/variables.less
+++ b/resources/css/base/variables.less
@@ -1,4 +1,4 @@
-@import "variables/gridvars";
+@import "grid/varibles";
 @import "variables/typevars";
 @import "variables/colour";
 @import "animation/easing";
