--- a/resources/css/elements/body.less
+++ b/resources/css/elements/body.less
@@ -1,6 +1,6 @@
 // Body reset
 body{
-	font-family: @font-family;
+	font-family: @font-family-unloaded;
 	color: @text-color;
 	background-color: @body-bg;
 	margin: 0;
