--- a/resources/css/elements/figure.less
+++ b/resources/css/elements/figure.less
@@ -1,18 +1,21 @@
 .figure{
-	.nested-container();
+	.column-container(md);
 	margin-top: 20px;
 	margin-bottom: 20px;
 
-	&__image,
-	&__caption{
-		.gutter-p(0, none);
-		.base-column-p();
+	> *{
+		.column();
+
+		&:first-child{
+			.column-size--nogutter(5, none);
+		}
+
+		&:last-child{
+			.column-size--nogutter(7, none);
+		}
 	}
 
 	&--caption-right &__image{
-		.gutter-p(0);
-		.column(5, md, padding);
-
 		@media(min-width: @md-min){
 			padding-right: 15px;
 			padding-left: 0;
@@ -20,9 +23,6 @@
 	}
 
 	&--caption-right &__caption{
-		.gutter-p(0);
-		.column(7, md, padding);
-
 		color: @blog-color-light;
 		.flexbox();
 		.align-items(center);
