--- a/resources/css/elements/type.less
+++ b/resources/css/elements/type.less
@@ -69,7 +69,8 @@
 // -------------------------
 /* stylelint-disable selector-list-comma-newline-after */
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6{
-	font-family: @headings-font-family;
+	//font-family: @headings-font-family;
+	font-family: @font-family-header-unloaded;
 	font-weight: @headings-font-weight;
 	line-height: @h-line-height;
 	color: @headings-color;
