--- a/resources/css/base/mixins.less
+++ b/resources/css/base/mixins.less
@@ -2,5 +2,5 @@
 @import "mixins/prefixmixins";
 @import "mixins/mixins";
 @import "mixins/nthSelectors";
-
+@import "type/type_mixins";
 @import "grid/mixins";
