--- a/resources/css/components/blog/results.less
+++ b/resources/css/components/blog/results.less
@@ -12,8 +12,7 @@
 
 	&__image{
 		.column();
-		.gutter();
-		.column-size(2, none);
+		.column-size--nogutter(2, none);
 
 		@media(max-width: @sm-max){
 			margin-bottom: 10px;
