--- a/resources/css/elements/quotes.less
+++ b/resources/css/elements/quotes.less
@@ -11,9 +11,9 @@ q{
 }
 
 blockquote{
+	.line-height();
 	padding: 10px 15px;
 	border-left: 4px solid @blockquote-border-color;
-	line-height: @p-line-height;
 	margin-bottom: @margin-bottom;
 
 	p,
