--- a/resources/css/forms/form.less
+++ b/resources/css/forms/form.less
@@ -4,9 +4,11 @@
 	@import "elements/inputs";
 	@import "elements/font-loading";
 	@import "elements/button";
+	@import "elements/validation";
 
 	//components
 	@import "components/select";
 	@import "components/radio-checkbox";
+	@import "components/switch";
 	@import "components/structure";
 }
