--- a/resources/css/base/animation/easing.less
+++ b/resources/css/base/animation/easing.less
@@ -1,7 +1,5 @@
-//easing ideas
-
-// ease in with a small bounce, used on big slide ins etc
-@easeInBounce: 		cubic-bezier(0.03, 0.93, 0.72, 1.1);
-
+//====================
+// Easing
+//====================
 //basic ease in
 @easeIn: 			cubic-bezier(0.3, 0.15, 0.18, 1);
