--- a/resources/css/base/variables/colour.less
+++ b/resources/css/base/variables/colour.less
@@ -1,11 +1,12 @@
-//
-// Variables
-// --------------------------------------------------
+//====================
+// color Vars
+//====================
 
-//== Colors ==//
-//app colours
+// App
+//==========
 
-//blog colors
+// Blog
+//==========
 @blog-color-light: 				#999;
 @blog-color-dark: 				#666;
 @blog-sidebar-background: 		#ededed;
@@ -13,11 +14,30 @@
 
 @sidebar-light: 				#888;
 @sidebar-dark: 					#666;
-@sidebar-band: 					#f4f4f4;
+@sidebar-band: 					#fff;
+@sidebar-band-border: 			#f5f4f4;
 
-//base colours
+@sidebar-band-icon: 			#666;
+@sidebar-previous-icon: 		#666;
+@sidebar-previous-first: 		#666;
+
+// UI
+//==========
+// slide in
+@slidein-bg-color: 				#150e12;
+@slidein-color: 				#fff;
+
+//menu
+@ml-breadcrumbs-color: 			#666;
+@ml-link-hover: 				#666;
+@ml-active: 					#666;
+
+//modal
+
+// Base
+//==========
 @body-bg: 				        #fff;
-@text-color: 			        #000;
+@text-color: 			        #444;
 @head-color: 			        #000;
 @link-color: 			        #000;
 @link-hover-color: 		        #666;
@@ -25,13 +45,18 @@
 @table-border-color:            #ddd;
 @blockquote-border-color:       @text-color;
 
-// Form colours
-@input-bg:                       #fff;
-@input-bg-disabled:              lighten(@input-bg, 5%);
-@input-disabled-color:           lighten(desaturate(@input-color, 60%), 40%);
+// form
+//==========
+@input-bg:                      #fff;
+@input-bg-disabled:             lighten(@input-bg, 5%);
+@input-disabled-color:          lighten(desaturate(@input-color, 60%), 40%);
 
-@input-color:                    @text-color;
-@input-border:                   #ccc;
-@input-border-radius:            2px;
-@input-border-focus:             #66afe9;
-@input-color-placeholder:        lighten(@text-color, 10%);
+@input-color:                   @text-color;
+@input-border:                  #ccc;
+@input-border-radius:           2px;
+@input-border-focus:            #66afe9;
+@input-color-placeholder:       lighten(@text-color, 50%);
+
+@input-focus: 					#89e1fc;
+@input-valid: 					#a7eb11;
+@input-invalid: 				#f44;
