--- a/resources/css/components/blog/previous-posts.less
+++ b/resources/css/components/blog/previous-posts.less
@@ -1,4 +1,8 @@
 .previous-post{
+	&__list .sidebar__icon{
+		stroke: @sidebar-previous-first;
+	}
+
 	&__item{
 		border-left: 1px solid @sidebar-light;
 		margin-left: 18px;
@@ -27,8 +31,18 @@
 			left: 0;
 			.translate(-50%, 0);
 
+			&:before{
+				background-color: @sidebar-previous-icon;
+			}
+
 			&--first{
 				top: (40px - 18px);
+				&:before{
+					background-color: @sidebar-previous-first;
+				}
+				&:after{
+					border: 1px solid lighten(desaturate(@sidebar-previous-first, 60%), 30%);
+				}
 			}
 		}
 
@@ -38,6 +52,8 @@
 		}
 
 		&-title{
+			font-weight: 700;
+
 			&:hover,
 			&:focus,
 			&:active{
