--- a/resources/css/components/ui/dismissible-slidein.less
+++ b/resources/css/components/ui/dismissible-slidein.less
@@ -1,14 +1,12 @@
-@slidein-bg-color: #150e13;
-@slidein-color: #fff;
-
 .ds-slidein{
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100%;
-	overflow: hidden;
+	min-height: 100vh;
+	overflow-x: hidden;
 	pointer-events: none;
+	z-index: 20;
 
 	&--visible{
 		pointer-events: auto;
@@ -22,7 +20,7 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background-color: rgba(0,0,0,0.1);
+		background-color: rgba(0, 0, 0, 0);
 		opacity: 0;
 		will-change: opacity;
 		.transition(opacity 0.3s @easeIn);
@@ -32,14 +30,29 @@
 		position: absolute;
 		top: 0;
 		left: 0;
-		width: 470px;
-		padding-left: 85px;
+		min-width: 470px;
+		padding-left: 30px;
 		padding-top: 52px;
 		background-color: @slidein-bg-color;
+		background-image: -webkit-linear-gradient(top, #150e12 0%, #1c1229 100%);
+		background-image: linear-gradient(180deg, #150e12 0%, #1c1229 100%);
 		color: @slidein-color;
 		height: 100%;
 		.translateX(-100%);
 		will-change: transform;
+		overflow-x: hidden;
+
+		@media(max-width: @xxs-max){
+			min-width: 100%;
+		}
+
+		@media(min-width: @sm-min){
+			padding-left: 55px;
+		}
+
+		@media(min-width: @md-min){
+			padding-left: 85px;
+		}
 	}
 
 	&--right &__container{
