--- a/resources/css/elements/font-loading.less
+++ b/resources/css/elements/font-loading.less
@@ -5,7 +5,7 @@
 .font-loaded body{
 	font-family: @font-family;
 }
-
+/* stylelint-disable selector-list-comma-newline-after */
 .subfont-loaded{
 	h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6{
 		font-family: @font-family-header-subset;
@@ -17,3 +17,4 @@
 		font-family: @font-family-header;
 	}
 }
+/* stylelint-enable */
