--- a/resources/css/elements/table.less
+++ b/resources/css/elements/table.less
@@ -21,8 +21,8 @@ table{
 		> tr{
 			> th,
 			> td{
+				.line-height();
 				padding: 8px;
-				line-height: @p-line-height;
 				vertical-align: top;
 				border-top: 1px solid @table-border-color;
 			}
