--- a/resources/css/elements/type.less
+++ b/resources/css/elements/type.less
@@ -1,93 +1,71 @@
-//
+//====================
 // Typography
-// --------------------------------------------------
+//====================
 
-.variable-font-size(@base-scale: @perfect-fourth, @base-size: @base-font-size){
-	.typeVars(@base-scale, @base-size);
-	body{
-		font-size: @font-size;
-	}
+// Headings
+//===============
+/* stylelint-disable selector-list-comma-newline-after */
+h1,
+.h1{
+	.font-size(h1);
+}
 
-	h1,
-	.h1{
-		font-size: @font-size-h1;
-	}
-	h2,
-	.h2{
-		font-size: @font-size-h2;
-	}
-	h3,
-	.h3{
-		font-size: @font-size-h3;
-	}
-	h4,
-	.h4{
-		font-size: @font-size-h4;
-	}
-	h5,
-	.h5{
-		font-size: @font-size-h5;
-	}
-	h6,
-	.h6{
-		font-size: @font-size-h6;
-	}
+h2,
+.h2{
+	.font-size(h2);
+}
 
-	select,
-	textarea,
-	input[type="text"],
-	input[type="password"],
-	input[type="datetime"],
-	input[type="datetime-local"],
-	input[type="date"],
-	input[type="month"],
-	input[type="time"],
-	input[type="week"],
-	input[type="number"],
-	input[type="email"],
-	input[type="url"],
-	input[type="search"],
-	input[type="tel"],
-	input[type="color"]{
-		font-size: @font-size;
+h3,
+.h3{
+	.font-size(h3);
+}
+
+h4,
+.h4{
+	.font-size(h4);
+}
+
+h5,
+.h5{
+	.font-size(h5);
+}
+
+h6,
+.h6{
+	.font-size(h6);
+}
+
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6{
+	font-family: @font-family-header-unloaded;
+	margin-bottom: @margin-bottom;
+
+	* + &{
+		margin-top: @margin-top;
 	}
 }
 
-.variable-font-size(@minor-third);
-
-// @media (min-width: @sm-min) {
-//     .variable-font-size(@major-third);
-// }
-// @media (min-width: @md-min) {
-//     .variable-font-size(@perfect-fourth);
-// }
-// @media (min-width: @lg-min) {
-//     .variable-font-size(@perfect-fifth);
-// }
-
-// Headings
-// -------------------------
-/* stylelint-disable selector-list-comma-newline-after */
-h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6{
-	//font-family: @headings-font-family;
-	font-family: @font-family-header-unloaded;
-	font-weight: @headings-font-weight;
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5{
 	line-height: @h-line-height;
-	color: @headings-color;
-	margin-top: @margin-top;
-	margin-bottom: @margin-bottom;
+	color: @head-color;
+}
+
+h1, .h1{
+	font-weight: 200;
+}
+
+h2, .h2, h3, .h3, h4, .h4, h5, .h5,  h6, .h6{
+	font-weight: 300;
 }
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6{
 	& + h1, & + .h1, & + h2, & + .h2, & + h3, & + .h3, & + h4, & + .h4, & + h5, & + .h5, & + h6, & + .h6{
 		margin-top: @margin-top-neg;
 	}
-	&:first-child{
-		margin-top: 0;
-	}
 }
 
 h6, .h6{
+	.line-height();
+
 	/* For browsers that don’t support OpenType,
 	* features, use all caps. */
 	text-transform: uppercase;
@@ -109,21 +87,19 @@ h6, .h6{
 }
 /* stylelint-enable */
 
-// Type Styles
-// -----------------
+// inline elements
+//===============
 p,
 table,
 pre{
-	line-height: @p-line-height;
+	.line-height();
 	margin-bottom: @margin-bottom;
 }
 
-strong{
+strong,
+b{
 	font-weight: @strong-weight;
 }
 
-// span{
-//     &.color{
-//         color: @text-color;
-//     }
-// }
+// colours
+//===============
